Alteração do título do site.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Sigma.js + Graphology.js example</title>
+  <title>Sugestão de colaboração</title>
   <script type="importmap">
       {
         "imports": {
