--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
       <label for="colorFilter">Filtrar pela área:</label>
       <select id="colorFilter" style="margin-left: 5px; width: 150px;">
         <option value="">Todas as áreas</option>
-        <option value="#999933">Letras</option>
+        <option value="#990000">Biologia</option>
         <option value="#330000">Física</option>
-        <option value="#00cc99">Pedagogia</option>
         <option value="#cc9999">Gestão</option>
         <option value="#ffccff">Informática</option>
-        <option value="#990000">Biologia</option>
-        <!--option value="#999999">Gray</option-->
+        <option value="#999933">Letras</option>
+        <option value="#339966">Matemática</option>
+        <option value="#00cc99">Pedagogia</option>
+        <option value="#0033ff">Sociologia</option>        
       </select>
     </div>
     
@@ -56,7 +57,7 @@
     <button id="resetFilter" style="background: #007cba; color: white; border: none; padding: 5px 10px; border-radius: 3px; cursor: pointer;">Reiniciar a visualização</button>
   </div>
   
-  <div id="container" style="width: 100%; height: 1600px; background: white"></div>
+  <div id="container" style="width: 100%; height: 1200px; background: white"></div>
   <script type="module">
     import * as sigma from 'sigma';
     import 'graphology'; // has no exports, import all
@@ -113,7 +114,7 @@
         image: NodeImageProgram,        
       },
       renderEdgeLabels: true,
-      edgeLabelSize: 10,
+      edgeLabelSize: 14,
       edgeLabelColor: { color: '#000000' },
       labelColor: { attribute: 'labelColor' }
     });
